@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2020 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2021 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -65,7 +65,7 @@ pretty-display:			yes
 complex-odo:			no
 
 # Allow REDEFINES to other than last equal level number
-indirect-redefines:		no # not verified yet
+indirect-redefines:		yes
 
 # Binary byte size - defines the allocated bytes according to PIC
 # Value:         signed  unsigned  bytes
@@ -252,16 +252,17 @@ records-mismatch-record-clause	error	# not verified yet
 record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		ok
-missing-statement:			warning
+missing-statement:			ok # gets a warning in some places but not in PERFORM
 zero-length-literals:			unconformable # not verified yet
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
 goto-entry:				unconformable
-assign-variable:			unconformable
+assign-variable:			ok
 assign-using-variable:			unconformable
 assign-ext-dyn:				ok
 assign-disk-from:			unconformable
 vsam-status:				ignore
+self-call-recursive:		skip
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		ACU
