@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2020 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2021 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -258,7 +258,7 @@ assign-using-variable:			ok
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
-
+self-call-recursive:		skip
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
