@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2020 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2021 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -262,6 +262,7 @@ assign-using-variable:			ok
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				ok
+self-call-recursive:		skip
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		realia
