@@ -4,6 +4,13 @@ NEWS - user visible changes				-*- outline -*-
 
 * Changes to the COBOL compiler (cobc) options:
 
+** the GnuCOBOL extension of auto-adding the RECURSIVE attribute
+   if a program potentionally calls its own PROGRAM-ID was moved
+   to a dialect option; it is now only active with -std=default
+   (and raises a warning as previously with -Wextra); if you wanto
+   to use this extension for other dialects use the new
+   -fself-call-recursive=warning (or "ok")
+
 ** adjustments to warning options:
    -Wconstant-expression was changed to a group warning and includes
     the new, previously integrated, -Wconstant-numlit-expression
